2016-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* compress-pdf.sh: Better handling of filenames containing spaces.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* COPYING: Created.
	* README.pdf: Updated general text and details of compress-pdf.sh
	* compress-pdf.sh: Created.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.pdf: Created.